# ckanext-embeddings

./: CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/embeddings/: actions.py  auth.py  backends.py  cli.py  helpers.py  lib.py  model.py  plugin.py
ckanext/embeddings/assets/: script.js  style.css  webassets.yml
ckanext/embeddings/migration/embeddings/versions/: 29898931a306_create_embeddings_tables.py
ckanext/embeddings/templates/package/: read.html
ckanext/embeddings/templates/snippets/: search_form.html  search_result_text.html
ckanext/embeddings/tests/: test_action.py  test_auth.py  test_plugin.py  test_search.py
solr/: Dockerfile
