[metadata]
name = ckanext-embeddings
version = 0.1.1
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amercader/ckanext-embeddings
author = Adrià Mercader
author_email = amercadero@gmail.com 
license = AGPL
classifiers =
            Development Status :: 3 - Alpha
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Programming Language :: Python :: 3.11
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             embeddings = ckanext.embeddings.plugin:EmbeddingPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

ckanext.embeddings.backends =
        sentence_transformers = ckanext.embeddings.backends:SentenceTransformerBackend
        openai = ckanext.embeddings.backends:OpenAIBackend

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/embeddings/i18n/ckanext-embeddings.pot
width = 80

[init_catalog]
domain = ckanext-embeddings
input_file = ckanext/embeddings/i18n/ckanext-embeddings.pot
output_dir = ckanext/embeddings/i18n

[update_catalog]
domain = ckanext-embeddings
input_file = ckanext/embeddings/i18n/ckanext-embeddings.pot
output_dir = ckanext/embeddings/i18n
previous = true

[compile_catalog]
domain = ckanext-embeddings
directory = ckanext/embeddings/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
